--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Vst_screens">
         <activity
+            android:name=".Notification"
+            android:exported="false" />
+        <activity
             android:name=".doctor_appointment"
             android:exported="true" />
         <activity
