--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Vst_screens">
         <activity
-            android:name=".Notification"
+            android:name=".notification_onclick_page"
+            android:exported="false" />
+        <activity
+            android:name=".store_dashboard"
             android:exported="false" />
         <activity
             android:name=".doctor_appointment"
@@ -22,7 +25,7 @@
             android:name=".MainActivity"
             android:exported="true" />
         <activity
-            android:name=".store_dashboard"
+            android:name=".Notification"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,6 +33,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <receiver android:name=".AlarmReceiver" />
     </application>
 
 </manifest>
