--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.vst_screens" >
+    package="com.example.vst_screens">
 
     <application
         android:allowBackup="true"
@@ -8,7 +8,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Vst_screens" >
+        android:theme="@style/Theme.Vst_screens">
+        <activity
+            android:name=".health_dashboard"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="false" />
