medicine_details_page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Vst_screens">
         <activity
+            android:name=".medicine_details_page"
+            android:exported="false" />
+        <activity
             android:name=".doctor_appointment"
             android:exported="false" />
         <activity
@@ -23,6 +26,7 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
