--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext.kotlin_version = "1.5.0"
     repositories {
         google()
         mavenCentral()
+//        maven {
+//            url 'https://dl.google.com/dl/android/maven2'
+//        }
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:7.2.0'
-
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        // classpath "net.serenity-bdd:serenity-gradle-plugin:2.0.49"
+        // classpath "net.serenity-bdd:serenity-emailer:2.0.49"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
